1.0.1

    [Anton Berezin <gurunars@gmail.com>]
        * PATCH: Added one extra test and fixed a bug with not being to do a transition through the initial state

1.0.0 2014-11-12

    [Anton Berezin <gurunars@gmail.com>]
        * Initial release